Mail: Fix 'Open draft" query

Fixes #18503

Change-Id: I6d65a88af2a00ce6e2b58e4a7557e2908e95dec9